crates/unleash-api-client-macros/tests/ui/fail/non_unit.stderr
error: FeatureKey only supports unit enum variants
 --> tests/ui/fail/non_unit.rs:9:5
  |
9 |     FeatureA(u32),
  |     ^^^^^^^^
